Bug 435837 - messages from the aqbanking plugin are swallowed
Summary: messages from the aqbanking plugin are swallowed
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: onlinebanking (other bugs)
Version First Reported In: 5.1.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-17 09:10 UTC by Ralf Habacker
Modified: 2021-04-17 10:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2021-04-17 09:10:53 UTC
STEPS TO REPRODUCE
1. Download kmymoney snapshot from kmymoney.org/snapshots.php. 
2. unpack the archive
3. open the shell in the unzipped bin directory and run set AQBANKING_LOGLEVEL=Debug to see the aqbanking logs 
4. run aqbanking-cli listaccs - you will see log messages
5. download dbgview and run it
5. launch kmymoney

OBSERVED RESULT
You will see a line indicating that the aqbanking plugin has been loaded 
[xxxx] "Plugins: kbanking loaded, built with (5.6.0stable-0/6.2.10.0stable), running with (5.6.0.0/6.2.10.0)"

If there are problems with the aqbanking configuration, a line is also displayed

[xxxx] KBanking online banking interface could not be initialized

but you can't see any related messages from the aqbanking installation as mentioned above when running the command line tool, either on the shell or with dbgview. 

EXPECTED RESULT
The messages from aqbanking should be displayed

SOFTWARE/OS VERSIONS
Windows: 10
KDE frameworks version: 5.65.0
Qt version: 5.11.0

ADDITIONAL INFORMATION
Aqbanking displays messages on standard error output by default, which is not available in GUI applications like kmymoney.
Comment 1 Thomas Baumgart 2021-04-17 09:48:44 UTC
Git commit 4fffdeb8fd8ea99c15eeec0dad721ab68b474518 by Thomas Baumgart.
Committed on 17/04/2021 at 09:46.
Pushed by tbaumgart into branch '5.1'.

Reroute AqBanking logs through qDebug

M  +11   -11   kmymoney/plugins/kbanking/kbanking.cpp

https://invent.kde.org/office/kmymoney/commit/4fffdeb8fd8ea99c15eeec0dad721ab68b474518
Comment 2 Thomas Baumgart 2021-04-17 10:00:51 UTC
Git commit 593a394474b8a233ed375a67638863429b18424c by Thomas Baumgart.
Committed on 17/04/2021 at 09:59.
Pushed by tbaumgart into branch 'master'.

Reroute AqBanking logs through qDebug
(cherry picked from commit 4fffdeb8fd8ea99c15eeec0dad721ab68b474518)

M  +11   -11   kmymoney/plugins/kbanking/kbanking.cpp

https://invent.kde.org/office/kmymoney/commit/593a394474b8a233ed375a67638863429b18424c